--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta http-equiv="Pragma" content="no-cache" />
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
       <title>Bahn Simulator</title>
-      <link rel="stylesheet" href="index.css" />
+      <link rel="stylesheet" href="index.css?01" />
       <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
       <link
          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
