--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
       <meta http-equiv="Pragma" content="no-cache" />
       <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
       <title>Bahn Simulator</title>
-      <link rel="stylesheet" href="start.css" />
+      <link rel="stylesheet" href="start.css?01" />
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -140,7 +140,7 @@
                         Hauptsignal
                      </button>
                   </h4>
-                  <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#newItemMenu">
+                  <div id="collapse1" class="accordion-collapse collapse show"  data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
@@ -155,7 +155,7 @@
                         Vorsignal
                      </button>
                   </h2>
-                  <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#newItemMenu">
+                  <div id="collapse2" class="accordion-collapse collapse"  data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
@@ -170,7 +170,35 @@
                         Lf-Signale
                      </button>
                   </h2>
-                  <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#newItemMenu">
+                  <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#newItemMenu">
+                     <div class="accordion-body"></div>
+                  </div>
+               </div><div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                     <button
+                        class="accordion-button collapsed user-select-none"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse4"
+                     >
+                        Ne-Signale
+                     </button>
+                  </h2>
+                  <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#newItemMenu">
+                     <div class="accordion-body"></div>
+                  </div>
+               </div><div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                     <button
+                        class="accordion-button collapsed user-select-none"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse5"
+                     >
+                        Weitere
+                     </button>
+                  </h2>
+                  <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#newItemMenu">
                      <div class="accordion-body"></div>
                   </div>
                </div>
